--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,61 +1,54 @@
-name: ci
+name: Run Playwright Tests and Publish Allure Report
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
-  Run_test:
-    runs-on: ubuntu-20.04 # Choosing OS
-    strategy:
-      matrix:
-        node-version: [20.11.1]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+  test:
+    runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-      # trying to install npm packages
-    - run: npm i
-    - run: npx playwright install --with-deps 
-    - name: run test
-      # trying to run tests
-      run: npx playwright test
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - uses: actions/upload-artifact@master
-      with:
-        name: allure-results
-        path: allure-results
-        retention-days: 20
-        
-    - name: Get Allure history
-      uses: actions/checkout@v2
-      if: always()
-      continue-on-error: true
-      with:
-        ref: gh-pages
-        path: gh-pages
-    
-    - name: Test marketplace action
-      uses: simple-elf/allure-report-action@master
-      if: always()
-      id: allure-report
-      with:
-        allure_results: allure-results
-        gh_pages: gh-pages
-        allure_report: allure-report
-        allure_history: allure-history
-        keep_reports: 20
+      - name: Install Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 20.11.1
 
-    - name: Deploy report to Github Pages
-      if: always()
-      uses: peaceiris/actions-gh-pages@v2
-      env:
-        PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        PUBLISH_BRANCH: gh-pages
-        PUBLISH_DIR: allure-history
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run tests
+        run: npx playwright test
+
+      - name: Copy Allure report data
+        if: success()
+        run: |
+          if [ -d "allure-results" ]; then
+            mkdir -p allure-results-previous
+            cp -r allure-results/* allure-results-previous
+          fi
+
+      - name: Generate Allure report
+        if: always()
+        run: npx allure generate --clean
+
+      - name: Push Allure report to another branch
+        if: always()
+        run: |
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
+          git checkout -b allure-report
+          git add -A
+          git commit -m "Add Allure report"
+          git push origin allure-report
+
+      - name: Setup GitHub Pages
+        if: always()
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./allure-report
