--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,7 @@ jobs:
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
         git config --global user.name "github-actions[bot]"
         git checkout -b allure-report
+        git pull origin allure-report --ff-only
         git add -A
         git commit -m "Add Allure report"
         git push origin allure-report
