--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,32 +27,21 @@ jobs:
       # trying to run tests
       run: npx playwright test
 
-    - name: Copy Allure report data
-      if: success()
-      run: |
-        if [ -d "allure-results" ]; then
-          mkdir -p allure-results-previous
-          cp -r allure-results/* allure-results-previous
-        fi
-
-    - name: Generate Allure report
+    - name: Build test report
+      uses: simple-elf/allure-report-action@master
       if: always()
-      run: npx allure generate --clean
-
-    - name: Push Allure report to another branch
-      if: always()
-      run: |
-        git config --global user.email "github-actions[bot]@users.noreply.github.com"
-        git config --global user.name "github-actions[bot]"
-        git checkout -b allure-report
-        git add -A
-        git commit -m "Add Allure report"
-        git push origin allure-report
-
-    - name: Setup GitHub Pages
-      if: always()
-      uses: peaceiris/actions-gh-pages@v3
+      id: allure-report
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./allure-report
+       allure_results: build/allure-results
+       gh_pages: gh-pages
+       allure_report: allure-report
+       allure_history: allure-history
+    
+    - name: Deploy report to Github Pages
+      if: always()
+      uses: peaceiris/actions-gh-pages@v2
+      env:
+        PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        PUBLISH_BRANCH: gh-pages
+        PUBLISH_DIR: allure-history
     
